Modified Draw.js, Statistics.js, index.html files

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <script src="Statistics.js"></script>
   <script src="Draw.js"></script>
   <script src="Result.js"></script>
+  <scrip src="Game.js"></scrip>
 </body>
 
 </html>
