--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
     </section>
 
   </div>
-  <script src="Wallet.js"></script>
-  <script src="Statistics.js"></script>
-  <script src="Draw.js"></script>
-  <script src="Result.js"></script>
-  <scrip src="Game.js"></scrip>
+  <script src= "Wallet.js"></script>
+  <script src= "Statistics.js"></script>
+  <script src= "Draw.js"></script>
+  <script src= "Result.js"></script>
+  <script src= "Game.js"></script>
+  <script src= "main.js"></script>
 </body>
 
 </html>
