--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Jednoręki bandyta</title>
+  <title>Slot Machine</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <div class="wrap">
 
-    <h1>Jednoręki bandyta</h1>
+    <h1>Slot Machine</h1>
 
     <section class="game">
       <div class="color"></div>
@@ -22,14 +22,14 @@
 
     <section class="play">
       <input type="number" placeholder="Podaj stawkę" id="bid">
-      <button id="start">Zakręć!</button>
+      <button id="start">Spin!</button>
     </section>
 
-    <section class="panel">TWOJE SRODKI PRZED KOLEJNĄ GRĄ TO: <span class="wallet"></span></section>
+    <section class="panel">YOUR MEASURES BEFORE THE NEXT GAME IS: <span class="wallet"></span></section>
 
     <section class="score">
-      <span class="result"></span> Za tobą <span class="number"></span> gier, w tym <span class="win"></span> wygranych
-      i <span class="loss"></span> przegranych
+      <span class="result"></span> You have had <span class="number"></span> games, including <span class="win"></span> wins
+      and <span class="loss"></span> losses
     </section>
 
   </div>
